<resources>
    <string name="app_name">Pokedex LSI</string>
    <string name="description_pokeball">pokedex icon</string>
    <string name="description_return_button">return button</string>
    <string name="register_title">Create your account</string>
    <string name="login_title">Login to your account</string>
    <string name="description_pokemon">pokemon image</string>
    <string name="about_title">About</string>
    <string name="abilities_title">Abilities</string>
    <string name="evolution_title">Evolution</string>
    <string name="stats_title">Stats</string>
    <string name="item_menu_pokedex_title">Pokedex</string>
    <string name="item_menu_bookmark_title">Bookmark</string>
    <string name="item_menu_close_title">Sign Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home_title">Pokedex</string>
    <string name="error_pokemon_empty">Espacio vacio</string>
    <string name="error_not_found">Error</string>
    <string name="pokemon_info">%d - %s</string>
    <string name="hint_pokemon">Ingrese un numero o id de pokemon</string>
    <string name="text_chip_one">Grass</string>
    <string name="text_chip_two">Fire</string>
    <string name="decription1_home">-Buscar pokemon por nombre o id: Ingdresar pokemon o id en la cajita de busqueda, el resultado sera visible en un textview debajo de la cajita de busqueda.</string>
    <string name="description2_home">-Mostrar 150 pokemons: al presionar sobre el pokemon se abrira otra vista con los pokemons mas detallados.</string>
    <string name="description_details">-Al abrirse la vista detallada de pokemons, observamos mas informacion de ellos, para activar el sonido emitido por los pockemons hacer clic sobre el pokemon (solo funciona con los primeros 25) para que no se llenara la lista con los 600 resources.</string>
</resources>