<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.nasser.pokedexlsi.ui.viewmodel.PokedexViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#48CFAF">

        <TextView
            android:id="@+id/pokemon_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_gap"
            android:layout_marginTop="@dimen/minimum_gap"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/maximum_text_size"
            app:layout_constraintEnd_toStartOf="@+id/pokemon_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Pikachu" />

        <TextView
            android:id="@+id/pokemon_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginEnd="@dimen/default_gap"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/pokemon_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pokemon_title"
            tools:text="#001" />

        <HorizontalScrollView
            android:id="@+id/scrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/pokemon_title"
            app:layout_constraintTop_toBottomOf="@id/pokemon_title">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/pokemon_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_example_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_chip_one" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_example_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_chip_two" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <ImageButton
            android:id="@+id/pokemon_img"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="@dimen/default_gap"
            android:contentDescription="@string/description_pokemon"
            android:elevation="2dp"
            android:src="@mipmap/ic_launcher"
            android:onClick="@{()-> viewmodel.startEmitSound()}"
            android:backgroundTint="@android:color/transparent"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scrollView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/pokemon_details_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/pokemon_detail_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/pokemon_details_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tabIndicatorColor="@android:color/holo_blue_dark"
                app:tabMode="fixed"
                app:tabTextColor="#1E1B30">

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pokemon_detail_tab_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>