<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.nasser.pokedexlsi.ui.viewmodel.PokedexViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_gap"
        tools:context=".ui.fragments.RegisterFragment">

        <ImageButton
            android:id="@+id/action_return"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/return_button_style"
            android:contentDescription="@string/description_return_button"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/register_icon_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/description_pokeball"
            android:src="@drawable/favicon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_return" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/register_title"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_icon_img" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_gap"
            android:hint="Name"
            app:boxStrokeWidth="0dp"
            android:background="@color/white"
            android:elevation="2dp"
            android:translationX="2dp"
            android:translationZ="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_layout_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:hint="Last Name"
            app:boxStrokeWidth="0dp"
            android:background="@color/white"
            android:elevation="2dp"
            android:translationX="2dp"
            android:translationZ="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_input_layout_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_edit_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:hint="Email"
            app:boxStrokeWidth="0dp"
            android:background="@color/white"
            android:elevation="2dp"
            android:translationX="2dp"
            android:translationZ="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_input_layout_lastName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:hint="Password"
            app:boxStrokeWidth="0dp"
            android:background="@color/white"
            android:elevation="2dp"
            android:translationX="2dp"
            android:translationZ="0dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_input_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_register"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginTop="@dimen/medium_gap"
            android:backgroundTint="#F57F17"
            android:text="Register user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_input_layout_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>